[package]
name = "package_info_derive"
description = "Derive macro for exposing Cargo Package Information to Rust code"
version = "0.1.0"
authors = ["Mike Harkins <mharkins@cosm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
